--- a/index-cronologico.html
+++ b/index-cronologico.html
@@ -1,18 +1,17 @@
-<index.html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Universo cinematografico de Marvel </title>
+    <title>Orden Cronologico</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,500&family=Poppins:ital,wght@0,100;1,200;1,300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-
-<body class="general">
+<body class="general-crono">
     <!-- Cabecera -->
     <header class="encabezado">
         <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
@@ -23,38 +22,16 @@
                 <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
                 <li> <a class="item-nav" href="index3.html"> Fase 3</a> </li>
                 <li> <a class="item-nav" href="index4.html">Fase 4</a> </li>
-                <li> <a class="item-nav" href="index-series.html">Series</a> </li>
+                <li> <a class="item-nav" href="">Series</a> </li>
                 <li> <a class="item-nav" href="index-futuro.html">Próximos estrenos</a> </li>
-                <li> <a class="item-nav" href="index-cronologico.html">Orden cronologico</a> </li>
+                <li> <a class="item-nav" href="">Orden cronologico</a> </li>
             </ul>
         </nav>
     </header>
     <!-- Main - Principal -->
-<main>
-        <h1 class="title"> Universo cinematografico de Marvel </h1>
-    <div class="background">
-            <p>El <b>Universo Cinematográfico de Marvel</b> (en inglés, <b>Marvel Cinematic Universe</b>) es una franquicia creada por Marvel Studios, designada como la  <b>Tierra-199999</b> dentro del multiverso de Marvel, con algunas entregas también ubicadas en realidades adyacentes o ramificadas.
-        Desde <b>2008</b>, Marvel Studios ha estrenado <b>26 películas</b> desde Iron Man (2008) hasta Eternals (2021) y <b>cuatro</b> series de televisión desde 2021, iniciando por WandaVision.</p>
-        <p>Este se separa en:</p>
-        <h2 class="subtitle"> Saga del infinito:</h2>
-        <div class="image-general">
-            <a href="index1.html"> <img class="fase1-i" src="/Imagenes/fase-1.jpeg" alt="fase-1"></a> 
-            <a href="index2.html"> <img class="fase2-i" src="/Imagenes/fase-2.jpeg" alt="fase-2"></a>
-            <a href="index3.html"> <img class="fase3-i" src="/Imagenes/fase-3.jpeg" alt="fase-3"></a>
-        </div>
-        <h2 class="subtitle"> Para posteriormente comenzar la Post-Saga del infinito:</h2>
-        <a href="index4.html"> <img class="fase4-i" src="/Imagenes/fase-4.jpeg" alt="fase4"></a>
-        <h3 class="subtitle"> Todas estas tiene un orden cronologico: </h3>
-        <small>(El cual no esta necesariamente vinculado con el año en el que salio la pelicula)</small>
-        <a href="index-cronologico.html" target="_blank"> <img class="orden-cronologico" src="/Imagenes/ORDEN-CRONOLOGICO.png" alt="Orden-cronologico"> </a>
-        <h3 class="subtitle">Aquí se pueden encontrar los próximos estrenos: </h3>
-        <a href="index-futuro.html" target="_blank"> <img class="estenos-i" src="/Imagenes/próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
-        <h3 class="subtitle">También hay series, algunas forman parte del U.C.M. otras se esperan que formen a futuro:</h3>
-        <a href="index-series.html" target="_blank"> <img class="series-i" src="/Imagenes/series.jpeg" alt="Series"></a>
-    </div>
-</main>
+    <main></main>
 
-    <!-- Pie de pagina -->
+ <!-- Pie de pagina -->
 <footer>
     <small>
         <span> María Busto - Todos los derechos reservados 2021 - Información basada en </span> 
