--- a/index1.html
+++ b/index1.html
@@ -22,9 +22,9 @@
                 <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
                 <li> <a class="item-nav" href="index3.html"> Fase 3</a> </li>
                 <li> <a class="item-nav" href="index4.html">Fase 4</a> </li>
-                <li> <a class="item-nav" href="">Series</a> </li>
+                <li> <a class="item-nav" href="index-series.html">Series</a> </li>
                 <li> <a class="item-nav" href="index-futuro.html">Próximos estrenos</a> </li>
-                <li> <a class="item-nav" href="">Orden cronologico</a> </li>
+                <li> <a class="item-nav" href="index-cronologico.html">Orden cronologico</a> </li>
             </ul>
         </nav>
     </header>
