--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 <body class="general-f2">
         <!-- Cabecera -->
 <header class="encabezado">
-    <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+    <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
     
             <!-- Nav -->
     <nav>
@@ -39,9 +39,9 @@
     <h2>Peliculas:</h2>
     <h5>Iron Man 3 (2013)</h5>
     <section class="ironman-3">
-      <img class="img-ironman3" src="/Imagenes/iron-man3.jpeg" alt="Iron-man-3">
+      <img class="img-ironman3" src="iron-man3.jpeg" alt="Iron-man-3">
         <div class="ironman3-reseña">
-            <img class="img-reseña-ironman3" src="/Imagenes/iron-man3-reseña.jpeg" alt="ironman3-reseña">            
+            <img class="img-reseña-ironman3" src="iron-man3-reseña.jpeg" alt="ironman3-reseña">            
             <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
             <p class="reseña-ironman-3">Anthony Stark se enfrenta a un enemigo cuyo poder no conoce límites. Cuando Stark comprende que su enemigo ha destruido su universo personal, se embarca en una angustiosa búsqueda para encontrar a los responsables. Este viaje pondrá a prueba su entereza una y otra vez. Acorralado, Stark tendrá que sobrevivir por sus propios medios, confiando en su ingenio y su instinto para proteger a las personas que quiere.</p>
             <a class="btn btn-primary" href="https://youtu.be/E_WdT8N_ATQ" target="_blank" role="button">Trailer</a>
@@ -49,9 +49,9 @@
     </section>
     <h5 class="titulo-thor-dark">Thor: The Dark World (2013)</h5>
     <section class="thor-dark">
-        <img class="img-thor-dark" src="/Imagenes/thor-dark.jpeg" alt="Thor-Dark">       
+        <img class="img-thor-dark" src="thor-dark.jpeg" alt="Thor-Dark">       
         <div class="thor-dark-reseña">
-            <img class="img-reseña-thor-dark" src="/Imagenes/thor-dark-reseña.jpeg" alt="Thor-Dark-reseña">
+            <img class="img-reseña-thor-dark" src="thor-dark-reseña.jpeg" alt="Thor-Dark-reseña">
             <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
             <p class="reseña-thor-dark">A raíz de los sucesos de <b>‘Thor’</b> y <b>‘The Avengers’</b>, <b>Thor</b> lucha por restablecer el orden en todo el cosmos... pero una antigua raza liderada por el vengativo <b>Malekith</b> regresa para volver a sumir al universo en la oscuridad. <b>Thor</b> se enfrenta a un enemigo al que ni siquiera <b>Odín</b> y <b>Asgard</b> pueden hacer frente y deberá embarcarse en su viaje más peligroso y personal. En este viaje se reunirá con <b>Jane Foster</b> y deberá sacrificarlo todo para salvar el mundo.</p>
             <a class="btn btn-primary" href="https://youtu.be/jmVa1kNDnWA" target="_blank" role="button">Trailer</a>
@@ -59,9 +59,9 @@
     </section>
     <h5 class="titulo-capitanamerica-winter">Captain America: The Winter Soldier (2014) </h5>
     <section class="capitanamerica-winter">
-        <img class="img-capitain-winter" src="/Imagenes/captain-winter.jpeg" alt="Winter Soldier">
+        <img class="img-capitain-winter" src="captain-winter.jpeg" alt="Winter Soldier">
         <div class="capitanamerica-winter-reseña">
-            <img class="img-reseña-capitain-winter" src="/Imagenes/captain-winter-reseña.jpeg" alt="Winter reseña">
+            <img class="img-reseña-capitain-winter" src="captain-winter-reseña.jpeg" alt="Winter reseña">
             <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
             <p class="reseña-capitain-winter"> <b>Steven Rogers</b>, alias el <b>Capitán América</b>, vivía tranquilamente en Washington, D.C. e intentando adaptarse al mundo moderno. Pero cuando un colega de <b>S.H.I.E.L.D.</b> se ve amenazado, <b>Steven</b> se encuentra envuelto en una trama de intrigas que puede poner en riesgo el mundo entero. Uniendo fuerzas con <b>Natalia Romanoff</b>, el <b>Capitán América</b> lucha por desenmascarar la conspiración cada vez mayor mientras pelea contra asesinos profesionales enviados para silenciarlo a cada paso. Cuando el plan malvado es revelado, <b>Steven Rogers</b> y <b>Natalia Romanoff</b> piden la ayuda de un nuevo aliado: <b>Samuel Wilson</b>. Sin embargo, pronto se encontrarán a sí mismos luchando contra un enemigo colosal e inesperado: el <b>Soldado del Invierno</b>.</p>
             <a class="btn btn-primary" href="https://youtu.be/FmXjNGVpXUc" target="_blank" role="button">Trailer</a>            
@@ -69,9 +69,9 @@
     </section>
     <h5 class="titulo-guardians">Guardians of the Galaxy (2014)</h5>
     <section class="guardians">
-    <img class="img-guardians" src="/Imagenes/guardians-of-the-galaxy.jpeg" alt="Guardianes de la Galaxia">
+    <img class="img-guardians" src="guardians-of-the-galaxy.jpeg" alt="Guardianes de la Galaxia">
     <div class="guardians-reseña">
-        <img class="img-reseña-guardians" src="/Imagenes/guardians-of-the-galaxy-reseña.jpeg" alt="reseña-guardians">
+        <img class="img-reseña-guardians" src="guardians-of-the-galaxy-reseña.jpeg" alt="reseña-guardians">
         <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
         <p class="reseña-guardians">Expande el Universo Cinematográfico de Marvel hacia el cosmos, donde un aventurero y temerario <b>Peter Quill</b> se encuentra a sí mismo como objeto de una implacable recompensa después de que robase un misterioso orbe buscado por <b>Ronan</b>, un poderoso villano con ambiciones que amenazan todo el universo. Para evitar al siempre persistente <b>Ronan</b>, <b>Quill</b> es forzado a entrar en una incómoda tregua con un <b>cuarteto</b> de dispares inadaptados: <b>Rocket</b>, un mapache pistolero; <b>Groot</b>, un humanoide en forma de árbol; la mortal y enigmática <b>Gamora</b>; y el motivado por la venganza <b>Drax</b>. Pero cuando <b>Peter</b> descubre el verdadero poder del orbe y la amenaza que supone para el cosmos, debe hacer todo lo posible por unir a sus dispares rivales para un último y desesperado intento – con el destino de la galaxia en juego.</p>
         <a class="btn btn-primary" href="https://youtu.be/wP9MqhsHcqA" target="_blank" role="button">Trailer</a>
@@ -79,9 +79,9 @@
     </section>
     <h5 class="titulo-avengers-ultron">Avengers: Age of Ultron (2015)</h5>
     <section class="avengers-ultron">
-        <img class="img-avengers-ultron" src="/Imagenes/avengers-ultron.jpeg" alt="Avengers Age of Ultron">
+        <img class="img-avengers-ultron" src="avengers-ultron.jpeg" alt="Avengers Age of Ultron">
         <div class="avengers-ultron-reseña">
-            <img class="img-reseña-avengers-ultron" src="/Imagenes/avengers-ultron-reseña.jpeg" alt="Reseña-ultron">
+            <img class="img-reseña-avengers-ultron" src="avengers-ultron-reseña.jpeg" alt="Reseña-ultron">
             <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
             <p class="reseña-avengers-ultron">Cuando <b>Anthony Stark</b> trata de reiniciar un programa dormido para mantener la paz, las cosas se salen de control y los héroes más poderosos del planeta, incluyendo a <b>Anthony Stark/Iron Man</b>, <b>Steven Rogers/Capitán América</b>, <b>Thor</b>, <b>Bruce Banner/Hulk</b>, <b>Natalia Romanoff/Black Widow</b> y <b>Clinton Barton/Hawkeye</b>, enfrentan la prueba definitiva y el destino del planeta está en la balanza. Mientras el villano <b>Ultrón</b> emerge, son los Vengadores quienes deben impedirle finalizar su terrible plan mientras forman difíciles alianzas y acciones inesperadas.</p>
             <a class="btn btn-primary" href="https://youtu.be/mSmjhq76DP8" target="_blank" role="button">Trailer</a>
@@ -89,30 +89,15 @@
     </section>
     <h5 class="titulo-antman">Ant-Man (2015)</h5>
     <section class="ant-man">
-        <img class="img-antman" src="/Imagenes/ant-man.jpeg" alt="ant-man">
+        <img class="img-antman" src="ant-man.jpeg" alt="ant-man">
         <div class="antman-reseña">
-            <img class="img-reseña-antman" src="/Imagenes/ant-man-reseña.jpeg" alt="reseña-ant man">
+            <img class="img-reseña-antman" src="ant-man-reseña.jpeg" alt="reseña-ant man">
             <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
             <p class="reseña-antman">Armado con la sorprendente habilidad de encogerse a escala pero incrementando la fuerza, el maestro ladrón <b>Scott Lang</b> debe abrazar a su héroe interior y ayudar a su mentor, el <b>Dr. Henry Pym</b>, a proteger el secreto que hay detrás del espectacular traje de <b>Ant-Man</b> de una nueva generación de amenazas crecientes. Contra lo que parecen obstáculos insalvables, <b>Pym</b> y <b>Lang</b> deben planear y ejecutar un atraco que salvará el mundo.</p>
             <a class="btn btn-primary" href="https://youtu.be/mBv4FSyg-P4" target="_blank" role="button">Trailer</a>                
         </div>
     </section>
-
-
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </main>
             <!-- Pie de pagina -->
 <footer>  
