--- a/index-cronologico.html
+++ b/index-cronologico.html
@@ -14,7 +14,7 @@
 <body class="general-crono">
     <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
         <!-- Nav -->
         <nav>
             <ul class="list-nav">
@@ -24,7 +24,7 @@
                 <li> <a class="item-nav" href="index4.html">Fase 4</a> </li>
                 <li> <a class="item-nav" href="">Series</a> </li>
                 <li> <a class="item-nav" href="index-futuro.html">Próximos estrenos</a> </li>
-                <li> <a class="item-nav" href="">Orden cronologico</a> </li>
+                <li> <a class="item-nav" href="index-cronologico.html">Orden cronologico</a> </li>
             </ul>
         </nav>
     </header>
