--- a/index-futuro.html
+++ b/index-futuro.html
@@ -13,7 +13,7 @@
 </head>
 <body class="general-futuros">
     <header class="encabezado">
-        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
         <!-- Nav -->
         <nav>
             <ul class="list-nav">
@@ -33,7 +33,7 @@
             <h2>Futuros estrenos de peliculas:</h2>
             <h5 class="titulo-noway">Spider-man: No way home</h5>
             <section class="Spiderman-noway">
-                <img class="img-spiderman-noway" src="spider-man-no-way-home.jpeg" alt="Spider-man no way home">
+                <img class="img-spiderman-noway" src="/Imagenes/spider-man-no-way-home.jpeg" alt="Spider-man no way home">
                 <div class="Spiderman-noway-texto">                
                     <p ><b>Fecha de estreno:</b> 17 de Diciembre 2021</p>
                     <p> Nuestro héroe, vecino y amigo es desenmascarado, y por tanto, ya no es capaz de separar su vida normal de los enormes riesgos que conlleva ser un Súperhéroe. Cuando le pide ayuda a Doctor Strange, los riesgos pasan a ser aún más peligrosos, obligándole a descubrir lo que realmente significa ser El Hombre Araña.</p>
@@ -42,7 +42,7 @@
             </section>
             <h5 class="titulo-strange2"> Doctor Strange in the Multiverse of Madness</h5>
                 <section class="strange2">
-                    <img class="img-strange2" src="doctor-strange-multiverse.jpeg" alt="Doctor Strange multiverse">
+                    <img class="img-strange2" src="/Imagenes/doctor-strange-multiverse.jpeg" alt="Doctor Strange multiverse">
                     <div class="strange2-texto">
                         <p><b>Fecha de estreno:</b> 6 de mayo 2022</p>
                         <p>En un principio, estaba programada para estrenarse el 7 de mayo de 2021, pero a raíz de la pandemia de COVID-19, el estreno fue re-programado</p>
@@ -50,7 +50,7 @@
                 </section>
                 <h5 class="titulo-thorlove"> Thor: Love and Thunder</h5>
                 <section class="thorlove">
-                    <img class="img-thorlove" src="thor-love-and.jpeg" alt="Thor Love and Thunder">
+                    <img class="img-thorlove" src="/Imagenes/thor-love-and.jpeg" alt="Thor Love and Thunder">
                     <div class="thorlove-texto">
                     <p> <b>Fecha de estreno:</b> 8 de julio 2022</p>
                     <p> No se conoce la sinopsis oficial de la película, pero se sabe algo: estará basada en la serie de cómics de <b>'The Mighty Thor'</b>. Serie de comics en la cual descubrimos que <b>Jane Foster</b>, el interés amoroso de Thor, tiene cáncer, y la única forma de curarse es a través del martillo de Thor, conocido como <b>mjölnir</b>.En un principio, estaba programada para estrenarse el 5 de noviembre de 2021, pero a raíz de la pandemia de COVID-19, el estreno fue re-programado</p>
@@ -58,7 +58,7 @@
                 </section>
                 <h5 class="titulo-wakanda">Black Panther: Wakanda Forever</h5>
                 <section class="wakanda">
-                    <img class="img-wakanda" src="wakanda.jpeg" alt="Black Panther: Wakanda Forever">
+                    <img class="img-wakanda" src="/Imagenes/wakanda.jpeg" alt="Black Panther: Wakanda Forever">
                     <div class="wakanda-texto">
                         <p><b>Fecha de estreno:</b> 11 de noviembre 2022</p>
                         <p>Se espera que en esta tan esperada secuela, se sumerja en el mundo de <b>Wakanda</b>, ya que Marvel anunció que no reformulará el personaje de <b>Chadwick Boseman</b> luego de su trágica muerte. En un principio, estaba programada para estrenarse el 8 de julio de 2022, pero a raíz de la pandemia de COVID-19, el estreno fue re-programado</p>
@@ -66,7 +66,7 @@
                 </section>
                 <h5 class="titulo-marvels">The marvels</h5>
                 <section class="marvels">
-                    <img src="the-marvels.jpeg" alt="The Marvels">
+                    <img src="/Imagenes/the-marvels.jpeg" alt="The Marvels">
                     <div class="marvels-texto">
                         <p><b>Fecha de estreno:</b> 17 de febrero 2023</p>
                         <p>En un principio, estaba programada para estrenarse el 11 de noviembre de 2022, pero a raíz de la pandemia de COVID-19, el estreno fue re-programado</p>
@@ -74,7 +74,7 @@
                 </section>
                 <h5 class="titulo-antman2">Ant-Man and the Wasp: Quantumania</h5>
                 <section class="antman2">
-                    <img class="img-antman2" src="ant-man-wasp2.jpeg" alt="Ant-Man and the Wasp: Quantumania">
+                    <img class="img-antman2" src="/Imagenes/ant-man-wasp2.jpeg" alt="Ant-Man and the Wasp: Quantumania">
                     <div class="antman2-texto">
                         <p><b>Fecha de estreno:</b> 28 de julio 2023</p>
                         <p>En un principio, estaba programada para estrenarse el 17 de febrero de 2023, pero a raíz de la pandemia de COVID-19, el estreno fue re-programado</p>
@@ -82,7 +82,7 @@
                 </section>
                 <h5 class="titulo-guardians3">Guardians of the Galaxy Vol. 3</h5>
                 <section class="guardians3">
-                    <img class="img-guardians3" src="guardians-of-the-galaxy3.jpeg" alt="Guardians of the Galaxy Vol. 3">
+                    <img class="img-guardians3" src="/Imagenes/guardians-of-the-galaxy3.jpeg" alt="Guardians of the Galaxy Vol. 3">
                     <div class="guardians3-texto">
                         <p><b>Fecha de estreno:</b> 5 de mayo 2023</p>
                     </div>
@@ -90,7 +90,7 @@
                 <h2 class="titulo-futuros-series">Futuros estrenos en series:</h2>
                 <h5 class="titulo-hawkeye">Hawkeye</h5>
                 <section class="hawkeye">
-                    <img class="img-hawkeye" src="haweye.jpeg" alt="hawkeye">
+                    <img class="img-hawkeye" src="/Imagenes/haweye.jpeg" alt="hawkeye">
                     <div class="hawkeye-texto">
                         <p><b>Fecha de estreno:</b> 24 de noviembre 2021</p>
                         <a class="btn btn-primary" href="https://youtu.be/eLb5trpCt9M" target="_blank" role="button">Trailer</a>
@@ -98,7 +98,7 @@
                 </section>
                 <h5 class="titulo-msmarvel">Ms.Marvel</h5>
                 <section class="msmarvel">
-                    <img class="img-msmarvel" src="ms-marvel.jpeg" alt="Ms. Marvel">
+                    <img class="img-msmarvel" src="/Imagenes/ms-marvel.jpeg" alt="Ms. Marvel">
                     <div class="msmarvel-texto">
                         <p><b>Fecha de estreno:</b> Principios 2022</p>
                         <p> Se centra en la favorita de los fanáticos: <b>Kamala Khan</b>, una paquistaní-estadounidense de <b>16 años</b> que crece en Jersey City. Una gran estudiante, ávida jugadora y voraz escritora de fan-fic, <b>Kamala</b> tiene una afinidad especial por los superhéroes, en particular por la <b>Capitana Marvel</b>. Sin embargo, <b>Kamala</b> lucha por encajar en casa y en la escuela, es decir, hasta que obtiene superpoderes como los héroes a los que siempre ha admirado. La vida es más fácil con superpoderes, ¿verdad?</p>
@@ -106,7 +106,7 @@
                 </section>
                 <h5 class="titulo-moon">Moon Knight</h5>
                 <section class="moon-knight">
-                    <img class="img-moon" src="moon-knight.jpeg" alt="Moon Knight">
+                    <img class="img-moon" src="/Imagenes/moon-knight.jpeg" alt="Moon Knight">
                     <div class="moon-texto">
                         <p><b>Fecha de esteno:</b> 2022</p>
                         <p><b>Marc Spector</b>, hijo de un rabino que escapó de los nazis y que, de pequeño, descubrió que un amigo de la familia, otro rabino, era en secreto un asesino en serie de judíos. Este descubrimiento es tan traumático que hace que <b>Marc</b> sufra un trastorno de personalidad múltiple y cree otras dos personalidades: <b>Steven Grant</b> y <b>Jake Lockley</b></p>
@@ -114,7 +114,7 @@
                 </section>
                 <h5 class="titulo-shehulk">She-Hulk</h5>
                 <section class="shehulk">
-                    <img class="img-shehulk" src="she-hulk.jpeg" alt="She-Hulk">
+                    <img class="img-shehulk" src="/Imagenes/she-hulk.jpeg" alt="She-Hulk">
                     <div class="shehulk-texto">
                         <p><b>Fecha de estreno:</b> <u>Sin anunciar</u></p>
                         <p><b>Jennifer Walters</b> es prima de <b>Bruce Banner</b> y obtiene sus poderes durante una transfusión de sangre. A diferencia de su primo, se siente mucho más cómoda con un gran alter-ego verde, ya que se convierte en la abogada elegida por cualquier superhéroe que tenga que estar en la corte. Por supuesto, Marvel <u>probablemente</u> cambiará parte de su historia de origen.</p>
@@ -122,7 +122,7 @@
             </section>
                 <h5 class="titulo-secret">Secret Invasion</h5>
                 <section class="secret-invasion">
-                    <img class="img-secret" src="secret-invasion.jpeg" alt="Secret Invasion">
+                    <img class="img-secret" src="/Imagenes/secret-invasion.jpeg" alt="Secret Invasion">
                     <div class="secret-texto">
                         <p><b>Fecha de estreno:</b> <u>Sin anunciar</u></p>
                         <p>Protagonizada por <b>Nick Fury</b>, es una versión de acción en vivo de una de las historias cómicas más famosas de todos los tiempos, que verá a Skrulls que cambian de forma infiltrarse en la Tierra</p>
