--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="general">
     <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
         <!-- Nav -->
         <nav>
             <ul class="list-nav">
@@ -38,19 +38,19 @@
         <p>Este se separa en:</p>
         <h2 class="subtitle"> Saga del infinito:</h2>
         <div class="image-general">
-            <a href="index1.html"> <img class="fase1-i" src="fase-1.jpeg" alt="fase-1"></a> 
-            <a href="index2.html"> <img class="fase2-i" src="fase-2.jpeg" alt="fase-2"></a>
-            <a href="index3.html"> <img class="fase3-i" src="fase-3.jpeg" alt="fase-3"></a>
+            <a href="index1.html"> <img class="fase1-i" src="/Imagenes/fase-1.jpeg" alt="fase-1"></a> 
+            <a href="index2.html"> <img class="fase2-i" src="/Imagenes/fase-2.jpeg" alt="fase-2"></a>
+            <a href="index3.html"> <img class="fase3-i" src="/Imagenes/fase-3.jpeg" alt="fase-3"></a>
         </div>
         <h2 class="subtitle"> Para posteriormente comenzar la Post-Saga del infinito:</h2>
-        <a href="index4.html"> <img class="fase4-i" src="fase-4.jpeg" alt="fase4"></a>
+        <a href="index4.html"> <img class="fase4-i" src="/Imagenes/fase-4.jpeg" alt="fase4"></a>
         <h3 class="subtitle"> Todas estas tiene un orden cronologico: </h3>
         <small>(El cual no esta necesariamente vinculado con el año en el que salio la pelicula)</small>
-        <a href="index-cronologico.html" target="_blank"> <img class="orden-cronologico" src="ORDEN-CRONOLOGICO.png" alt="Orden-cronologico"> </a>
+        <a href="index-cronologico.html" target="_blank"> <img class="orden-cronologico" src="/Imagenes/ORDEN-CRONOLOGICO.png" alt="Orden-cronologico"> </a>
         <h3 class="subtitle">Aquí se pueden encontrar los próximos estrenos: </h3>
-        <a href="index-futuro.html" target="_blank"> <img class="estenos-i" src="próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
+        <a href="index-futuro.html" target="_blank"> <img class="estenos-i" src="/Imagenes/próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
         <h3 class="subtitle">También hay series, algunas forman parte del U.C.M. otras se esperan que formen a futuro:</h3>
-        <a href="index-series.html" target="_blank"> <img class="series-i" src="series.jpeg" alt="Series"></a>
+        <a href="index-series.html" target="_blank"> <img class="series-i" src="/Imagenes/series.jpeg" alt="Series"></a>
     </div>
 </main>
 
