--- a/index4.html
+++ b/index4.html
@@ -13,7 +13,7 @@
 </head>
 <body class="general-f4">
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
         <!-- Nav -->
         <nav>
             <ul class="list-nav">
@@ -36,9 +36,9 @@
            <h2>Peliculas:</h2>
            <h5>Black Widow (2021)</h5>
            <section class="widow">
-               <img class="img-widow" src="/Imagenes/black-widow.jpeg" alt="Black-widow">
+               <img class="img-widow" src="black-widow.jpeg" alt="Black-widow">
                <div class="blackwidow-reseña">
-                   <img src="/Imagenes/black-widow-reseña.jpeg" alt="reseña-black-widow">
+                   <img src="black-widow-reseña.jpeg" alt="reseña-black-widow">
                    <small> (Para entender esta referencia haga <a  class="item-nav"href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
                    <p class="reseña-blackwidow">Se estrenó el 9 de julio en Estados Unidos en cines y en <b>Disney+</b> con Premier Access simultáneamente, con esta pelicula se recaudaron 215 millones de dólares en todo el mundo. <b>Natalia Romanoff</b>, alias <b>Black Widow</b>, se enfrenta a las partes más oscuras de su libro cuando surge una conspiración peligrosa con vínculos de su pasado. Perseguida por una fuerza que no se detendrá ante nada para derribarla, <b>Natalia</b> debe lidiar con su historia como espía y las relaciones rotas que dejó a su paso mucho antes de convertirse en Vengadora.</p>
                    <a class="btn btn-primary" href="https://youtu.be/gR3JFH_3LhY" target="_blank" role="button">Trailer</a>        
@@ -46,9 +46,9 @@
            </section>
            <h5 class="titulo-shang-chi">Shang-Chi and the Legend of the Ten Rings (2021)</h5>
            <section class="shang-chi">
-               <img class="img-shang-chi" src="/Imagenes/shang-chi.jpeg" alt="Shang-Chi">
+               <img class="img-shang-chi" src="shang-chi.jpeg" alt="Shang-Chi">
                <div class="shang-chi-reseña">
-                   <img src="/Imagenes/shang-chi-reseña.jpeg" alt="reseña shang chi">
+                   <img src="shang-chi-reseña.jpeg" alt="reseña shang chi">
                    <small> (Para entender esta referencia haga <a  class="item-nav"href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
                    <p class="reseña-shang-chi">Se estrenó el 3 de septiembre de 2021 en Estados Unidos. En dos semanas de estreno, ha recaudado <b>247,6</b> millones de dólares en todo el mundo. <b>Xu Shang-Chi</b> debe confrontar el pasado que pensó que había dejado atrás, cuando se ve atraído por la red de la misteriosa organización de los Diez Anillos.</p>
                    <a class="btn btn-primary" href="https://youtu.be/Y_SS9K4N0K0" target="_blank" role="button">Trailer</a>        
@@ -56,9 +56,9 @@
            </section>
            <h5 class="titulo-eternals">Eternals (2021)</h5>
            <section class="eternals">
-               <img class="img-eternals" src="/Imagenes/eternals.jpeg" alt="Eternals">
+               <img class="img-eternals" src="eternals.jpeg" alt="Eternals">
                <div class="eternals-reseña">
-                   <img class="img-reseña-eternals" src="/Imagenes/eternals-reseña.png" alt="Reseña Eternals">
+                   <img class="img-reseña-eternals" src="eternals-reseña.png" alt="Reseña Eternals">
                    <small> (Para entender esta referencia haga <a  class="item-nav"href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
                    <p class="reseña-eternals">Se estrenò el 4 de noviembre y en su primer fin de semana, logró una recaudación de <b>161</b> millones de dólares en todo el mundo. Presenta un nuevo y emocionante equipo de superhéroes en el Universo Cinematográfico de Marvel, antiguos alienígenas que han estado viviendo en la Tierra en secreto durante miles de años. Después de los eventos de <b>‘Avengers: Endgame’</b>, una tragedia inesperada los obliga a salir de las sombras para reunirse contra el enemigo más antiguo de la humanidad, los <b>Desviantes</b>.</p>
                    <a class="btn btn-primary" href="https://youtu.be/MKWXuj3ZYf0" target="_blank" role="button">Trailer</a>        
