--- a/index-series.html
+++ b/index-series.html
@@ -172,7 +172,7 @@
             </section>
             <h5 class="titulo-punisher">The Punisher</h5>
             <section class="punisher">
-                <img class="img-punisher" src="defenders.jpeg" alt="The Punisher">
+                <img class="img-punisher" src="punisher.jpeg" alt="The Punisher">
                 <div class="punisher-reseña">
                     <img src="defenders-reseña.jpeg" alt="Reseña The Punisher">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
