--- a/index-series.html
+++ b/index-series.html
@@ -174,7 +174,7 @@
             <section class="punisher">
                 <img class="img-punisher" src="punisher.jpeg" alt="The Punisher">
                 <div class="punisher-reseña">
-                    <img src="defenders-reseña.jpeg" alt="Reseña The Punisher">
+                    <img src="punisher-reseña.jpeg" alt="Reseña The Punisher">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-punisher">Serie de televisión protagonizada por el superhéroe del mismo nombre. Fue producida por Marvel Television y se estrenó en Netflix. Cuenta con 26 capitulos divididos en 2 temporadas, estrenadas en <b>2017</b> la primera temporada y en <b>2019</b> la segunda temporada, siendo este año también el año en el que se cancelo.</p>
                     <ul class="listnav-serie">
