--- a/index-cronologico.html
+++ b/index-cronologico.html
@@ -17,15 +17,20 @@
         <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
         <!-- Nav -->
         <nav>
-            <ul class="list-nav">
-                <li> <a class="item-nav" href="index1.html"> Fase 1</a> </li> 
-                <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
-                <li> <a class="item-nav" href="index3.html"> Fase 3</a> </li>
-                <li> <a class="item-nav" href="index4.html">Fase 4</a> </li>
-                <li> <a class="item-nav" href="index-series.html">Series</a> </li>
-                <li> <a class="item-nav" href="index-futuro.html">Próximos estrenos</a> </li>
-                <li> <a class="item-nav" href="index-cronologico.html">Orden cronologico</a> </li>
-            </ul>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menu 
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="index1.html">Fase 1</a></li>
+                  <li><a class="dropdown-item" href="index2.html">Fase 2</a></li>
+                  <li><a class="dropdown-item" href="index3">Fase 3</a></li>
+                  <li><a class="dropdown-item" href="index4.html">Fase 4</a></li>
+                  <li><a class="dropdown-item" href="index-series.html">Series</a></li>
+                  <li><a class="dropdown-item" href="index-futuro.html">Próximos estrenos</a></li>
+                  <li><a class="dropdown-item" href="index-cronologico.html">Orden cronologico</a></li>
+                </ul>
+              </div>
         </nav>
     </header>
     <!-- Main - Principal -->
