--- a/index4.html
+++ b/index4.html
@@ -21,6 +21,7 @@
                     Menu 
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="index.html">Inicio</a></li>
                   <li><a class="dropdown-item" href="index1.html">Fase 1</a></li>
                   <li><a class="dropdown-item" href="index2.html">Fase 2</a></li>
                   <li><a class="dropdown-item" href="index3">Fase 3</a></li>
